# Analyse-AI

./: .gitignore  README.md  app.py  cli.py  config.py  package-lock.json  package.json  pyproject.toml  requirements.txt
auth/: auth_db.py  dependencies.py  routes.py  schemas.py  security.py
database/: db_manager.py  query_logger.py  schema_manager.py
frontend/: streamlit_app.py
loaders/: file_loader.py
models/: request_models.py
profiling/: profiler.py
react-frontend/: package-lock.json  package.json
react-frontend/src/: App.jsx  main.jsx
react-frontend/src/components/: ChartPanel.jsx  Dashboard.jsx  DatasetInsights.jsx  DatasetOverview.jsx  HistoryPanel.jsx  ProtectedRoute.jsx  QueryPanel.jsx  ResultPanel.jsx  Sidebar.jsx  TablePreview.jsx  UploadPanel.jsx
react-frontend/src/context/: AuthContext.jsx
react-frontend/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx
react-frontend/src/services/: api.js
services/: chart_service.py  query_service.py  schema_service.py  schema_storage.py  workspace_service.py
user_data/4/: schema.json
user_data/5/: schema.json
