[project]
name = "universal-data-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "langchain>=1.3.8",
    "langchain-groq>=1.1.3",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "uvicorn[standard]>=0.49.0",
]
